@@ -33,51 +33,51 @@
  * of output.
  */
 
-#define M_INFO               LOGLEV(1, 0, 0)  /* default informational messages */
+#define M_INFO               LOGLEV(1, 0, 0)         /* default informational messages */
 
-#define D_LINK_ERRORS        LOGLEV(1, 1, M_NONFATAL)   /* show link errors from main event loop */
-#define D_CRYPT_ERRORS       LOGLEV(1, 2, M_NONFATAL)   /* show errors from encrypt/decrypt */
-#define D_TLS_ERRORS         LOGLEV(1, 3, M_NONFATAL)   /* show TLS control channel errors */
-#define D_RESOLVE_ERRORS     LOGLEV(1, 4, M_NONFATAL)   /* show hostname resolve errors */
-#define D_COMP_ERRORS        LOGLEV(1, 5, M_NONFATAL)   /* show compression errors */
-#define D_PID_PERSIST        LOGLEV(1, 6, M_NONFATAL)   /* show packet_id persist errors */
-#define D_FRAG_ERRORS        LOGLEV(1, 7, M_NONFATAL)   /* show fragmentation errors */
+#define D_LINK_ERRORS        LOGLEV(1, 10, M_NONFATAL)   /* show link errors from main event loop */
+#define D_CRYPT_ERRORS       LOGLEV(1, 11, M_NONFATAL)   /* show errors from encrypt/decrypt */
+#define D_TLS_ERRORS         LOGLEV(1, 12, M_NONFATAL)   /* show TLS control channel errors */
+#define D_RESOLVE_ERRORS     LOGLEV(1, 13, M_NONFATAL)   /* show hostname resolve errors */
+#define D_COMP_ERRORS        LOGLEV(1, 14, M_NONFATAL)   /* show compression errors */
+#define D_PID_PERSIST        LOGLEV(1, 15, M_NONFATAL)   /* show packet_id persist errors */
+#define D_FRAG_ERRORS        LOGLEV(1, 16, M_NONFATAL)   /* show fragmentation errors */
 
-#define D_SHOW_PARMS         LOGLEV(2, 10, 0)           /* show all parameters on program initiation */
+#define D_HANDSHAKE          LOGLEV(2, 20, 0)        /* show data & control channel handshakes */
+#define D_MTU_INFO           LOGLEV(2, 21, 0)        /* show debugging MTU info */
 
-#define D_HANDSHAKE          LOGLEV(3, 11, 0)        /* show data & control channel handshakes */
-#define D_GREMLIN            LOGLEV(3, 12, 0)        /* show simulated outage info from gremlin module */
+#define D_TLS_DEBUG_LOW      LOGLEV(3, 20, 0)        /* low frequency info from tls_session routines */
+#define D_GREMLIN            LOGLEV(3, 30, 0)        /* show simulated outage info from gremlin module */
+#define D_COMP_LOW           LOGLEV(3, 31, 0)        /* show adaptive compression state changes */
 
-#define D_TLS_DEBUG_LOW      LOGLEV(4, 11, 0)        /* low frequency info from tls_session routines */
+#define D_SHOW_PARMS         LOGLEV(4, 40, 0)        /* show all parameters on program initiation */
 
-#define D_COMP_LOW           LOGLEV(5, 13, 0)        /* show adaptive compression state changes */
-#define D_GREMLIN_VERBOSE    LOGLEV(5, 50, M_DEBUG)  /* show verbose info from gremlin module */
-#define D_FRAG_DEBUG         LOGLEV(5, 51, M_DEBUG)  /* show fragment debugging info */
-#define D_MTU_DEBUG          LOGLEV(5, 52, M_DEBUG)  /* show dynamic MTU info */
-#define D_SHAPER             LOGLEV(5, 53, M_DEBUG)  /* show traffic shaper info */
+#define D_UDP_RW             LOGLEV(6, 60, M_DEBUG)  /* show UDP reads/writes (terse) */
 
-#define D_SHOW_KEYS          LOGLEV(6, 14, 0)        /* show data channel encryption keys */
-#define D_REL_DEBUG          LOGLEV(6, 60, M_DEBUG)  /* show detailed info from reliable routines */
-#define D_UDP_RW             LOGLEV(6, 61, M_DEBUG)  /* show UDP reads/writes */
+#define D_SHOW_KEYS          LOGLEV(7, 70, M_DEBUG)  /* show data channel encryption keys */
+#define D_REL_DEBUG          LOGLEV(7, 70, M_DEBUG)  /* show detailed info from reliable routines */
+#define D_MTU_DEBUG          LOGLEV(7, 70, M_DEBUG)  /* show dynamic MTU info */
+#define D_FRAG_DEBUG         LOGLEV(7, 70, M_DEBUG)  /* show fragment debugging info */
 
-#define D_HANDSHAKE_VERBOSE  LOGLEV(7, 15, 0)        /* show detailed description of each handshake */
-#define D_TLS_DEBUG_MED      LOGLEV(7, 16, 0)        /* medium frequency info from tls_session routines */
-#define D_INTERVAL           LOGLEV(7, 70, M_DEBUG)  /* show interval.h debugging info */
+#define D_HANDSHAKE_VERBOSE  LOGLEV(8, 70, M_DEBUG)  /* show detailed description of each handshake */
+#define D_TLS_DEBUG_MED      LOGLEV(8, 70, M_DEBUG)  /* medium frequency info from tls_session routines */
+#define D_INTERVAL           LOGLEV(8, 70, M_DEBUG)  /* show interval.h debugging info */
+#define D_GREMLIN_VERBOSE    LOGLEV(8, 70, M_DEBUG)  /* show verbose info from gremlin module */
 
-#define D_TLS_DEBUG          LOGLEV(8, 20, M_DEBUG)  /* show detailed info from TLS routines */
-#define D_CRYPTO_DEBUG       LOGLEV(8, 21, M_DEBUG)  /* show detailed info from crypto.c routines */
-#define D_COMP               LOGLEV(8, 22, M_DEBUG)  /* show compression info */
-#define D_READ_WRITE         LOGLEV(8, 23, M_DEBUG)  /* verbose account of all tun/UDP reads/writes/opens */
-#define D_PACKET_CONTENT     LOGLEV(8, 24, M_DEBUG)  /* show before/after encryption packet content */
-#define D_TLS_NO_SEND_KEY    LOGLEV(8, 25, M_DEBUG)  /* show when no data channel send-key exists */
-#define D_THREAD_DEBUG       LOGLEV(8, 26, M_DEBUG)  /* show pthread debug information */
-#define D_REL_LOW            LOGLEV(8, 27, M_DEBUG)  /* show low frequency info from reliable layer */
-#define D_PID_DEBUG          LOGLEV(8, 38, M_DEBUG)  /* show packet-id debugging info */
-#define D_PID_PERSIST_DEBUG  LOGLEV(8, 29, M_DEBUG)  /* show packet-id persist debugging info */
-#define D_UDP_RW_VERBOSE     LOGLEV(8, 30, M_DEBUG)  /* show UDP reads/writes with greater verbosity */
+#define D_TLS_DEBUG          LOGLEV(9, 70, M_DEBUG)  /* show detailed info from TLS routines */
+#define D_CRYPTO_DEBUG       LOGLEV(9, 70, M_DEBUG)  /* show detailed info from crypto.c routines */
+#define D_COMP               LOGLEV(9, 70, M_DEBUG)  /* show compression info */
+#define D_READ_WRITE         LOGLEV(9, 70, M_DEBUG)  /* verbose account of all tun/UDP reads/writes/opens */
+#define D_PACKET_CONTENT     LOGLEV(9, 70, M_DEBUG)  /* show before/after encryption packet content */
+#define D_TLS_NO_SEND_KEY    LOGLEV(9, 70, M_DEBUG)  /* show when no data channel send-key exists */
+#define D_THREAD_DEBUG       LOGLEV(9, 70, M_DEBUG)  /* show pthread debug information */
+#define D_REL_LOW            LOGLEV(9, 70, M_DEBUG)  /* show low frequency info from reliable layer */
+#define D_PID_DEBUG          LOGLEV(9, 70, M_DEBUG)  /* show packet-id debugging info */
+#define D_PID_PERSIST_DEBUG  LOGLEV(9, 70, M_DEBUG)  /* show packet-id persist debugging info */
+#define D_UDP_RW_VERBOSE     LOGLEV(9, 70, M_DEBUG)  /* show UDP reads/writes with greater verbosity */
 
-#define D_SHAPER_DEBUG       LOGLEV(9, 40, M_DEBUG)  /* show traffic shaper info */
+#define D_SHAPER_DEBUG       LOGLEV(10, 70, M_DEBUG)  /* show traffic shaper info */
 
-#define D_OPENSSL_LOCK       LOGLEV(10, 41, M_DEBUG) /* show OpenSSL locks */
+#define D_OPENSSL_LOCK       LOGLEV(11, 70, M_DEBUG) /* show OpenSSL locks */
 
 #endif
