@@ -132,18 +132,16 @@ static const char usage_message[] =
   "                  RSA key number crunching.\n"
 #endif
   "--verb n        : Set output verbosity to n (default=%d):\n"
-  "                  (Level 5 is recommended if you want a good summary\n"
+  "                  (Level 3 is recommended if you want a good summary\n"
   "                  of what's happening without being swamped by output).\n"
   "                : 0 -- no output except fatal errors\n"
   "                : 1 -- startup info + connection initiated messages +\n"
   "                       non-fatal encryption & net errors\n"
-  "                : 2 -- show all parameter settings\n"
-  "                : 3 -- show key negotiations + --gremlin net outages\n"
-  "                : 4 -- show partial TLS debug info\n"
-  "                : 5 -- show adaptive compress info\n"
-  "                : 6 -- show keys\n"
-  "                : 7 -- show verbose key negotiations\n"
-  "                : 8 -- show all debug info\n"
+  "                : 2 -- show TLS negotiations\n"
+  "                : 3 -- show extra TLS info + --gremlin net outages +\n"
+  "                       adaptive compress info\n"
+  "                : 4 -- show parameters\n"
+  "                : 5 to 11 -- debug messages of increasing verbosity\n"
   "--mute n        : Log at most n consecutive messages in the same category.\n"
   "--gremlin       : Simulate dropped & corrupted packets + network outages\n"
   "                  to test robustness of protocol (for debugging only).\n"
